# ulstu-diplom

./: docker-compose.yml  nginx.conf
ClientDesktop/: README.md  Tinkling.spec  database.db  main.py  pyproject.toml  requirements.txt
ClientDesktop/alembic/: env.py
ClientDesktop/alembic/versions/: c9156cf89bc0_.py
ClientDesktop/app/: config.py  main.py
ClientDesktop/app/data/: database.py  models.py
ClientDesktop/app/data/repositories/: PresetRepository.py  SampleRepository.py
ClientDesktop/app/data/schemas/: PresetSchema.py  SampleSchema.py
ClientDesktop/app/utils/MIDI/: ComputerKeyboard.py  MidiHost.py
ClientDesktop/app/utils/Music/: Preset.py  PresetHost.py  Sample.py  SamplesHost.py  SoundEngine.py
ClientDesktop/app/views/DeviceWidget/: DeviceWidget.py
ClientDesktop/app/views/MainWindow/: MainWindow.py  MainWindow.ui  ui_MainWindow.py
ClientDesktop/app/views/SignUp/: sign_up.py
ClientDesktop/app/views/SingIn/: SignIn.ui  sign_in.py
ClientDesktop/sound_engine/: main.py
ClientDesktop/src/: config.py  main.py
ClientDesktop/src/data/: database.py  models.py
ClientDesktop/src/data/repositories/: NoteRepository.py  PresetRepository.py  SampleRepository.py
ClientDesktop/src/data/schemas/: PresetSchema.py
ClientDesktop/src/utils/: ComputerKeyboard.py  MidiHost.py  PresetHost.py  SoundEngine.py
ClientDesktop/src/views/: MainWindow.py
ClientDesktop/src/views/MainWindow/: MainWindow.py  ui_MainWindow.py
ClientDesktop/src/views/MusicWindow/: MusicWindow.py  (+2 more)
ClientDesktop/utils/MIDI/: ComputerKeyboard.py
ClientDesktop/utils/Music/: SamplesHost.py
ClientDesktop/utils/SoundTEST/: main.py
ClientDesktop/views/DeviceWidget/: DeviceWidget.py  DeviceWidget.ui  ui_DeviceWidget.py
ClientDesktop/views/MainWindow/: MainWindow.py  ui_MainWindow.py
ClientDesktop/views/SignUp/: SignUp.ui  sign_up.py  ui_SignUp.py
ClientDesktop/views/SingIn/: sign_in.py  ui_SignIn.py
backend/: Dockerfile  Dockerfile_No_CUDA  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01e0211a669f_.py  3448cdd92008_.py  42c25818003f_.py  561dc9f7e602_.py  a1eb6130164f_.py  c4b930d43f68_.py  dffd4ab8330a_.py
backend/app/: config.py  main.py  setup_audio_ldm.py
backend/app/data/: database.py  models.py
backend/app/routers/: auth_router.py  file_router.py  preset_router.py  samples_router.py
backend/app/utils/: AudioLDM2Generator.py  auth.py  music_generaion.py  worker.py
backend/certs/: private.pem  public.pem
(+54 files in other folders)
