[tool.poetry]
name = "clientdesktop"
version = "0.1.0"
description = ""
authors = ["shadowik <zahar.mark@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
pyside6 = "^6.8.1"
schema = "^0.7.7"
python-rtmidi = "^1.5.8"
mido = "^1.3.3"
pynput = "^1.7.7"
keyboard = "^0.13.5"
pygame = "^2.6.1"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
