[tool.poetry]
name = "clientdesktop"
version = "0.1.0"
description = ""
authors = ["shadowik <zahar.mark@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
pyside6 = "^6.8.1"
schema = "^0.7.7"
python-rtmidi = "^1.5.8"
mido = "^1.3.3"
pynput = "^1.7.7"
keyboard = "^0.13.5"
pygame = "^2.6.1"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.1"
alembic = "^1.14.1"
black = "^25.1.0"
requests = "^2.32.3"
numpy = "^2.2.4"
matplotlib = "<3.10"
sounddevice = "^0.5.1"
soundfile = "^0.13.1"
scipy = "^1.15.2"
keyring = "^25.6.0"
setuptools = "^78.1.0"
py2app = "^0.28.8"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
