[tool.poetry]
name = "clientdesktop"
version = "0.1.0"
description = ""
authors = ["shadowik <zahar.mark@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
pyside6 = "^6.8.1"
python-rtmidi = "^1.5.8"
mido = "^1.3.3"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.1"
requests = "^2.32.3"
numpy = "^2.2.4"
sounddevice = "^0.5.1"
soundfile = "^0.13.1"
scipy = "^1.15.2"
keyring = "^25.6.0"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
